...
            "state": "translated",
            "value": "녹음 항목 없음"
          }
        }
      }
    },
    "New Recording": {
      "extractionState": "manual",
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "새로운 녹음"
...
            "state": "translated",
            "value": "표시 이름"
          }
        }
      }
    },
    "Edit": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "편집"
          }
...
            "state": "translated",
            "value": "생성"
          }
        }
      }
    },
    "Move to Folder": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "폴더로 이동"
          }
...
